# haven

./: .gitignore  Cargo.toml  README.md  mix.exs
Arduino/: controll_servo_motor.ino
controller/: Cargo.toml
controller/haven/: Cargo.toml
controller/src/: lib.rs
frontend/haven/: package.json  pnpm-lock.yaml  tailwind.config.js
frontend/haven/app/: layout.tsx  page.tsx  providers.tsx
frontend/haven/components/: interface.tsx  navbar.tsx
lib/: haven.ex
lib/haven/: application.ex  router.ex
server/: Cargo.toml  door.toml.default
server/src/: main.rs
src/: main.rs
test/: haven_test.exs
