[package]
name = "haven"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
controller = { path = "../controller" }
actix-web = "4"
serde = { version = "1.0", features = ["derive"] }
actix-cors = { version = "0.6" }
toml = { version = "0.7"}
serde_json = { version = "1.0" }
